--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -23,8 +23,11 @@ jobs:
     - name: Install dependencies
       run: make
       
-    - name: Run check
-      run: make check
+    #- name: Run check
+    #  run: make check
       
-    - name: Run distcheck
-      run: make distcheck
+    #- name: Run distcheck
+    #  run: make distcheck
+    
+    - name: Clean up
+      run: make clean
