--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,8 +19,11 @@ jobs:
     
     #- name: configure
     #  run: ./configure
+    
+    - name: Clean up old binaries
+      run: make clean
       
-    - name: Install dependencies
+    - name: Run make
       run: make
       
     #- name: Run check
@@ -28,6 +31,3 @@ jobs:
       
     #- name: Run distcheck
     #  run: make distcheck
-    
-    - name: Clean up
-      run: make clean
