--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,4 +1,4 @@
-name: Makefile CI
+name: Development Build CI
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    name: Build for macOS
+    name: macOS (Dev Build)
     runs-on: macos-latest
 
     steps:
@@ -17,17 +17,23 @@ jobs:
     - uses: actions/checkout@v2
     - uses: mikehardy/buildcache-action@v1
     
-    #- name: configure
-    #  run: ./configure
-    
     - name: Clean up old binaries
       run: make clean
       
     - name: Run make
       run: make
       
-    #- name: Run check
-    #  run: make check
-      
-    #- name: Run distcheck
-    #  run: make distcheck
+    - name: Compress compiled binary
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        directory: './dist'
+        path: './mupen64plus_next_libretro.dylib'
+        filename: 'mupen64plus-next-dev.zip'
+        exclusions: '*.git* /*node_modules/* .editorconfig'
+        
+    - name: Upload Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "./dist/mupen64plus-next-dev.zip"
+        token: ${{ secrets.GITHUB_TOKEN }}
