--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,14 +4,14 @@ name: Create Release
 
 # Controls when the workflow will run
 on:
-#   workflow_run:
-#     workflows: ["Build (Dev)"]
-#     types: [completed]
-#     branches: [develop]
+  workflow_run:
+    workflows: ["Build (Dev)"]
+    types: [completed]
+    branches: [develop]
 
-  push:
-    tags:
-      - '*'
+#   push:
+#     tags:
+#       - '*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
