--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -30,7 +30,7 @@ jobs:
           prerelease: false
           release_name: ${{ github.ref }}
           tag_name: ${{ github.ref }}
-          body_file: 'RELEASE.md'
+          body_path: RELEASE.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: Upload release artifact         # Upload built binary to created release
